--- a/index.html
+++ b/index.html
@@ -202,5 +202,30 @@
         </div>
     </div>
     <!-- End About -->
+
+    <!-- Start Contact -->
+    <div class="contact">
+        <div class="container">
+            <h2 class="special-heading">Contact</h2>
+            <p class="special-paragraph">We are born to create</p>
+            <div class="info">
+                <p class="label">Feel free to drop us a line at:</p>
+                <a class="link" href="mailto:ahmedlotfe@gmail.com" target="_blank">ahmedlotfe@gmail.com</a>
+                <div class="social">
+                    Find Us On Social Networks
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Contact -->
+
+    <!-- Start Footer -->
+    <div class="footer">
+        &copy; 2021 <span>Leon</span> All Right Reserved
+    </div>
+    <!-- End Footer -->
 </body>
 </html>
